--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <lombok-version>1.18.22</lombok-version>
     </properties>
 
     <!-- 依赖声明 -->
@@ -50,7 +51,11 @@
                 <version>${druid.version}</version>
             </dependency>
 
-
+            <dependency>
+                <groupId>org.springframework.kafka</groupId>
+                <artifactId>spring-kafka</artifactId>
+                <version>1.3.11.RELEASE</version>
+            </dependency>
 
             <!-- pagehelper 分页插件 -->
             <dependency>
@@ -62,6 +67,11 @@
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>3.4.3</version>
+            </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok-version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
