--- a/kafkaConsumerAsync/src/main/resources/application.yml
+++ b/kafkaConsumerAsync/src/main/resources/application.yml
@@ -1,36 +1,84 @@
 spring:
   kafka:
-    bootstrap-servers: xx.xx.xx.xx:9092 # kafka集群信息，多个用逗号间隔
-    # 生产者
-    producer:
-      # 重试次数，设置大于0的值，则客户端会将发送失败的记录重新发送
-      retries: 3
-      batch-size: 16384 #批量处理大小，16K
-      buffer-memory: 33554432 #缓冲存储大，32M
-      acks: 1
-      # 指定消息key和消息体的编解码方式
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
-    # 消费者
+    # 指定 kafka 地址可以多个
+    bootstrap-servers: 192.168.124.186:9092
+    # 指定listener 容器中的线程数，用于提高并发量
+    listener:
+      concurrency: 1
+      ack-mode: manual
+      type: batch
+      poll-timeout: 1000
+
+    # 消费者的配置
     consumer:
-      # 消费者组
-      group-id: TestGroup
-      # 是否自动提交
-      enable-auto-commit: false
-      # 消费偏移配置
-      # none：如果没有为消费者找到先前的offset的值,即没有自动维护偏移量,也没有手动维护偏移量,则抛出异常
-      # earliest：在各分区下有提交的offset时：从offset处开始消费；在各分区下无提交的offset时：从头开始消费
-      # latest：在各分区下有提交的offset时：从offset处开始消费；在各分区下无提交的offset时：从最新的数据开始消费
+      # 指定默认消费者group id
+      group-id: test-group
+      #earliest
+      #当各分区下有已提交的offset时，从提交的offset开始消费；无提交的offset时，从头开始消费
+      #latest
+      #当各分区下有已提交的offset时，从提交的offset开始消费；无提交的offset时，消费新产生的该分区下的数据
+      #none
+      #topic各分区都存在已提交的offset时，从offset后开始消费；只要有一个分区不存在已提交的offset，则抛出异常
       auto-offset-reset: earliest
+      # 是否开启自动提交
+      enable-auto-commit: false
+      # key,value的解码方式
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-    # 监听
-    listener:
-      # record：当每一条记录被消费者监听器（ListenerConsumer）处理之后提交
-      # batch：当每一批poll()的数据被ListenerConsumer处理之后提交
-      # time：当每一批poll()的数据被ListenerConsumer处理之后，距离上次提交时间大于TIME时提交
-      # count：当每一批poll()的数据被ListenerConsumer处理之后，被处理record数量大于等于COUNT时提交
-      # count_time：TIME或COUNT中有一个条件满足时提交
-      # manual：当每一批poll()的数据被ListenerConsumer处理之后, 手动调用Acknowledgment.acknowledge()后提交
-      # manual_immediate：手动调用Acknowledgment.acknowledge()后立即提交，一般推荐使用这种
-      ack-mode: manual_immediate
+
+
+
+  # 数据源配置
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driverClassName: com.mysql.cj.jdbc.Driver
+    druid:
+      res:
+        # 从数据源开关/默认关闭
+        enabled: true
+        url: jdbc:mysql://221.231.13.230:42264/resource_pool?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&rewriteBatchedStatements=true&autoReconnect=true&serverTimezone=Asia/Shanghai
+        username: root
+        password: 123456
+      # 初始连接数
+      initialSize: 5
+      # 最小连接池数量
+      minIdle: 10
+      # 最大连接池数量
+      maxActive: 20
+      # 配置获取连接等待超时的时间
+      maxWait: 60000
+      # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+      timeBetweenEvictionRunsMillis: 60000
+      # 配置一个连接在池中最小生存的时间，单位是毫秒
+      minEvictableIdleTimeMillis: 300000
+      # 配置一个连接在池中最大生存的时间，单位是毫秒
+      maxEvictableIdleTimeMillis: 900000
+      # 配置检测连接是否有效
+      validationQuery: SELECT 1 FROM DUAL
+      testWhileIdle: true
+      testOnBorrow: false
+      testOnReturn: false
+      webStatFilter:
+        enabled: true
+      statViewServlet:
+        enabled: true
+        # 设置白名单，不填则允许所有访问
+        allow:
+        url-pattern: /druid/*
+        # 控制台管理用户名和密码
+        login-username: ruoyi
+        login-password: 123456
+      filter:
+        stat:
+          enabled: true
+          # 慢SQL记录
+          log-slow-sql: true
+          slow-sql-millis: 1000
+          merge-sql: true
+        wall:
+          config:
+            multi-statement-allow: true
+
+logging:
+  level:
+    com.smartinsight: debug
